--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,8 @@ minio = "*"
 flask-cors = "*"
 zipstream = "*"
 requests = "*"
+fernet = "*"
+cryptography = "*"
 
 [requires]
 python_version = "3.7"
